Fix overlapping navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@
 }
 
 /* Global Styles */
+html {
+    scroll-padding-top: 90px; /* Adjust for fixed navbar height */
+}
+
 body {
     font-family: var(--secondary-font);
     padding-top: 60px; /* Adjust for fixed navbar height */
@@ -28,7 +32,7 @@ h2 {
 
 /* Header margin section */
 .content-section {
-    padding-top: 2rem; /* prevents Navbar from overlapping */
+    padding-top: 4rem; /* prevents Navbar from overlapping */
 }
 
 main #about {
